--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<modules>
 		<module>main-service</module>
+		<module>app-config-data</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -27,6 +28,12 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>dev.evertonsavio.app</groupId>
+				<artifactId>app-config-data</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter</artifactId>
