--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>dev.evertonsavio.app</groupId>
+				<artifactId>main-service</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter</artifactId>
 				<version>${spring-boot.version}</version>
